Finished ReadMe Site

--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- External link (relative) to your main stylesheet -->
+        <!-- External link (relative) to your main styleshe  -->
         <link rel="stylesheet" href="css/screen.css">
 
         <!-- External link (relative) to your javascript file -->
@@ -15,7 +15,20 @@
     </head>
     <body>
         <!-- Add your site content here -->
+        <h1><font face="Helvetica" size="20">Background</font></h1>
+        <img src="images/me.jpg" alt="River Fishing" style="width:404px;height:328px">
+        <br></br>
+        <p>Hello, my name is Glenn M. White, I am a senior at Michigan State University
+          and I will be finished with my undergraduate this December.
+          I am 25 years old and took a year off from school a few years ago
+          and started my own IT Consulting company. While my Web Design experience
+          is very limited I have a much deeper knowledge infrastructure, and look forward to learning more
+          about Web Design and Development!
+        </p>
+        <h2>Shameless Plug</h2>
+        <A HREF="http://www.gwitsolutions.com"><img src="images/GW LLC Logo.png" alt="Corp Logo"></A>
+
         <!-- Relative URL image link example -->
-        <img src="images/northport.jpg" alt="Northport" />
+
     </body>
 </html>
