Final Week4 Push

--- a/Week 4/starter-template/index.html
+++ b/Week 4/starter-template/index.html
@@ -14,7 +14,58 @@
         <script src="js/index.js"></script>
     </head>
   <body>
-    <a href="#a1">Article 1</a>
+    <ol>
+      <li><a href="#a1">Article 1</a>
+        <ul>
+          <li><a href="#a1s1">Section 1</a></li>
+          <li><a href="#a1s2">Section 2</a></li>
+          <li><a href="#a1s3">Section 3</a></li>
+          <li><a href="#a1s4">Section 4</a></li>
+          <li><a href="#a1s5">Section 5</a></li>
+          <li><a href="#a1s6">Section 6</a></li>
+          <li><a href="#a1s7">Section 7</a></li>
+          <li><a href="#a1s8">Section 8</a></li>
+          <li><a href="#a1s9">Section 9</a></li>
+          <li><a href="#a1s10">Section 10</a></li>
+        </ul>
+      </li>
+      <li><a href="#a2">Article 2</a>
+        <ul>
+          <li><a href="#a2s1">Section 1</a></li>
+          <li><a href="#a2s2">Section 2</a></li>
+          <li><a href="#a2s3">Section 3</a></li>
+          <li><a href="#a2s4">Section 4</a></li>
+        </ul>
+      </li>
+      <li><a href="#a3">Article 3</a>
+        <ul>
+          <li><a href="#a3s1">Section 1</a></li>
+          <li><a href="#a3s2">Section 2</a></li>
+          <li><a href="#a3s3">Section 3</a></li>
+        </ul>
+      </li>
+      <li><a href="#a4">Article 4</a>
+        <ul>
+          <li><a href="#a4s1">Section 1</a></li>
+          <li><a href="#a4s2">Section 2</a></li>
+          <li><a href="#a4s3">Section 3</a></li>
+          <li><a href="#a4s4">Section 4</a></li>
+        </ul>
+      </li>
+      <li><a href="#a5">Article 5</a></li>
+      <li><a href="#a6">Article 6</a></li>
+      <li><a href="#a7">Article 7</a></li>
+      <li><a href="#am1">Amendment 1</a></li>
+      <li><a href="#am2">Amendment 2</a></li>
+      <li><a href="#am3">Amendment 3</a></li>
+      <li><a href="#am4">Amendment 4</a></li>
+      <li><a href="#am5">Amendment 5</a></li>
+      <li><a href="#am6">Amendment 6</a></li>
+      <li><a href="#am7">Amendment 7</a></li>
+      <li><a href="#am8">Amendment 8</a></li>
+      <li><a href="#am9">Amendment 9</a></li>
+      <li><a href="#am10">Amendment 10</a></li>
+    </ol>
         <!-- Add your site content here -->
             <p>We the People of the United States, in Order to form a more perfect Union,
     establish Justice, insure domestic Tranquility, provide for the common
@@ -22,13 +73,13 @@
     ourselves and our Posterity, do ordain and establish this Constitution for the
     United States of America.</p>
 
-    <h1><a name="a1"></a>Article 1.</h1>
+    <h1 id="a1">Article 1.</h1>
 
-    <h2><a name="a1s1"></a>Section 1</h2>
+    <h2 id="a1s1">Section 1</h2>
     <p>All legislative Powers herein granted shall be vested in a Congress of the
     United States, which shall consist of a Senate and House of Representatives.<p>
 
-    <h2><a name="a1s2"></a>Section 2</h2>
+    <h2 id="a1s2">Section 2</h2>
     <p>The House of Representatives shall be composed of Members chosen every second
     Year by the People of the several States, and the Electors in each State shall
     have the Qualifications requisite for Electors of the most numerous Branch of
@@ -61,7 +112,7 @@
     The House of Representatives shall choose their Speaker and other Officers; and
     shall have the sole Power of Impeachment.</p>
 
-    <h2><a name="a1s3"></a>Section 3</h2>
+    <h2 id="a1s3">Section 3</h2>
     <p>The Senate of the United States shall be composed of two Senators from each
     State, chosen by the Legislature thereof, for six Years; and each Senator shall
     have one Vote.
@@ -98,7 +149,7 @@
     liable and subject to Indictment, Trial, Judgment and Punishment, according to
     Law.</p>
 
-    <h2><a name="a1s4"></a>Section 4</h2>
+    <h2 id="a1s4">Section 4</h2>
     <p>The Times, Places and Manner of holding Elections for Senators and
     Representatives, shall be prescribed in each State by the Legislature thereof;
     but the Congress may at any time by Law make or alter such Regulations, except
@@ -108,7 +159,7 @@
     be on the first Monday in December, unless they shall by Law appoint a
     different Day.</p>
 
-    <h2><a name="a1s5"></a>Section 5</h2>
+    <h2 id="a1s5">Section 5</h2>
     <p>Each House shall be the Judge of the Elections, Returns and Qualifications of
     its own Members, and a Majority of each shall constitute a Quorum to do
     Business; but a smaller number may adjourn from day to day, and may be
@@ -127,7 +178,7 @@
     the other, adjourn for more than three days, nor to any other Place than that
     in which the two Houses shall be sitting.</p>
 
-    <h2><a name="a1s6"></a>Section 6</h2>
+    <h2 id="a1s6">Section 6</h2>
     <p>The Senators and Representatives shall receive a Compensation for their
     Services, to be ascertained by Law, and paid out of the Treasury of the United
     States. They shall in all Cases, except Treason, Felony and Breach of the
@@ -143,7 +194,7 @@
     shall be a Member of either House during his Continuance in Office.</p>
 
 
-    <h2><a name="a1s7"></a>Section 7</h2>
+    <h2 id="a1s7">Section 7</h2>
     <p>All bills for raising Revenue shall originate in the House of Representatives;
     but the Senate may propose or concur with Amendments as on other Bills.
 
@@ -171,7 +222,7 @@
     to the Rules and Limitations prescribed in the Case of a Bill.</p>
 
 
-    <h2><a name="a1s8"></a>Section 8</h2>
+    <h2 id="a1s8">Section 8</h2>
     <p>The Congress shall have Power To lay and collect Taxes, Duties, Imposts and
     Excises, to pay the Debts and provide for the common Defence and general
     Welfare of the United States; but all Duties, Imposts and Excises shall be
@@ -233,7 +284,7 @@
     Constitution in the Government of the United States, or in any Department or
     Officer thereof.</p>
 
-    <h2><a name="a1s9"></a>Section 9</h2>
+    <h2 id="a1s9">Section 9</h2>
     <p>The Migration or Importation of such Persons as any of the States now existing
     shall think proper to admit, shall not be prohibited by the Congress prior to
     the Year one thousand eight hundred and eight, but a tax or duty may be imposed
@@ -262,7 +313,7 @@
     the Congress, accept of any present, Emolument, Office, or Title, of any kind
     whatever, from any King, Prince or foreign State.</p>
 
-    <h2><a name="a1s10"></a>Section 10</h2>
+    <h2 id="a1s10">Section 10</h2>
     <p>No State shall enter into any Treaty, Alliance, or Confederation; grant Letters
     of Marque and Reprisal; coin Money; emit Bills of Credit; make any Thing but
     gold and silver Coin a Tender in Payment of Debts; pass any Bill of Attainder,
@@ -281,9 +332,9 @@
     with another State, or with a foreign Power, or engage in War, unless actually
     invaded, or in such imminent Danger as will not admit of delay.</p>
 
-    <h1><a name="a2"></a>Article 2.</h1>
+    <h1 id="a2">Article 2.</h1>
 
-    <h2><a name="a2s1"></a>Section 1</h2>
+    <h2 id="a2s1">Section 1</h2>
     <p>The executive Power shall be vested in a President of the United States of
     America. He shall hold his Office during the Term of four Years, and, together
     with the Vice-President chosen for the same Term, be elected, as follows:
@@ -346,7 +397,7 @@
     President of the United States, and will to the best of my Ability, preserve,
     protect and defend the Constitution of the United States."</p>
 
-    <h2><a name="a2s2"></a>Section 2</h2>
+    <h2 id="a2s2">Section 2</h2>
     <p>The President shall be Commander in Chief of the Army and Navy of the United
     States, and of the Militia of the several States, when called into the actual
     Service of the United States; he may require the Opinion, in writing, of the
@@ -369,7 +420,7 @@
     the Recess of the Senate, by granting Commissions which shall expire at the End
     of their next Session.</p>
 
-    <h2><a name="a2s3"></a>Section 3</h2>
+    <h2 id="a2s3">Section 3</h2>
     <p>He shall from time to time give to the Congress Information of the State of the
     Union, and recommend to their Consideration such Measures as he shall judge
     necessary and expedient; he may, on extraordinary Occasions, convene both
@@ -379,14 +430,14 @@
     shall take Care that the Laws be faithfully executed, and shall Commission all
     the Officers of the United States.</p>
 
-    <h2><a name="a2s4"></a>Section 4</h2>
+    <h2 id="a2s4">Section 4</h2>
     <p>The President, Vice President and all civil Officers of the United States,
     shall be removed from Office on Impeachment for, and Conviction of, Treason,
     Bribery, or other high Crimes and Misdemeanors.</p>
 
-    <h1><a name="a3"></a>Article 3.</h1>
+    <h1 id="a3">Article 3.</h1>
 
-    <h2><a name="a3s1"></a>Section 1</h2>
+    <h2 id="a3s1">Section 1</h2>
     <p>The judicial Power of the United States, shall be vested in one supreme Court,
     and in such inferior Courts as the Congress may from time to time ordain and
     establish. The Judges, both of the supreme and inferior Courts, shall hold
@@ -394,7 +445,7 @@
     their Services a Compensation which shall not be diminished during their
     Continuance in Office.</p>
 
-    <h2><a name="a3s2"></a>Section 2</h2>
+    <h2 id="a3s2">Section 2</h2>
     <p>The judicial Power shall extend to all Cases, in Law and Equity, arising under
     this Constitution, the Laws of the United States, and Treaties made, or which
     shall be made, under their Authority; to all Cases affecting Ambassadors, other
@@ -416,7 +467,7 @@
     committed; but when not committed within any State, the Trial shall be at such
     Place or Places as the Congress may by Law have directed.</p>
 
-    <h2><a name="a3s3"></a>Section 3</h2>
+    <h2 id="a3s3">Section 3</h2>
     <p>Treason against the United States, shall consist only in levying War against
     them, or in adhering to their Enemies, giving them Aid and Comfort. No Person
     shall be convicted of Treason unless on the Testimony of two Witnesses to the
@@ -426,15 +477,15 @@
     Attainder of Treason shall work Corruption of Blood, or Forfeiture except
     during the Life of the Person attainted.</p>
 
-    <h1><a name="a4"></a>Article 4.</h1>
+    <h1 id="a4">Article 4.</h1>
 
-    <h2>S<a name="a4s1"></a>Section 1</h2>
+    <h2 id="a4s1">Section 1</h2>
     <p>Full Faith and Credit shall be given in each State to the public Acts, Records,
     and judicial Proceedings of every other State. And the Congress may by general
     Laws prescribe the Manner in which such Acts, Records and Proceedings shall be
     proved, and the Effect thereof.</p>
 
-    <h2><a name="a4s2"></a>Section 2</h2>
+    <h2 id="a4s2">Section 2</h2>
     <p>The Citizens of each State shall be entitled to all Privileges and Immunities
     of Citizens in the several States.
 
@@ -448,7 +499,7 @@
     be discharged from such Service or Labour, But shall be delivered up on Claim
     of the Party to whom such Service or Labour may be due.<p>
 
-    <h2>Section 3</h2>
+    <h2 id="a4s3">Section 3</h2>
     <p>New States may be admitted by the Congress into this Union; but no new States
     shall be formed or erected within the Jurisdiction of any other State; nor any
     State be formed by the Junction of two or more States, or parts of States,
@@ -460,13 +511,13 @@
     States; and nothing in this Constitution shall be so construed as to Prejudice
     any Claims of the United States, or of any particular State.</p>
 
-    <h2>Section 4</h2>
+    <h2 id="a4s4">Section 4</h2>
     <p>The United States shall guarantee to every State in this Union a Republican
     Form of Government, and shall protect each of them against Invasion; and on
     Application of the Legislature, or of the Executive (when the Legislature
     cannot be convened) against domestic Violence.</p>
 
-    <h1>Article 5.</h1>
+    <h1 id="a5">Article 5.</h1>
 
     <p>The Congress, whenever two thirds of both Houses shall deem it necessary, shall
     propose Amendments to this Constitution, or, on the Application of the
@@ -480,7 +531,7 @@
     fourth Clauses in the Ninth Section of the first Article; and that no State,
     without its Consent, shall be deprived of its equal Suffrage in the Senate.</p>
 
-    <h1>Article 6.</h1>
+    <h1 id="a6">Article 6.</h1>
 
     <p>All Debts contracted and Engagements entered into, before the Adoption of this
     Constitution, shall be as valid against the United States under this
@@ -499,7 +550,7 @@
     required as a Qualification to any Office or public Trust under the United
     States.</p>
 
-    <h1>Article 7.</h1>
+    <h1 id="a7">Article 7.</h1>
 
     <p>The Ratification of the Conventions of nine States, shall be sufficient for the
     Establishment of this Constitution between the States so ratifying the Same.
@@ -542,29 +593,29 @@
     Attest: William Jackson, Secretary</p>
 
 
-    <h1>Amendment 1</h1>
+    <h1 id="am1">Amendment 1</h1>
     <p>Congress shall make no law respecting an establishment of religion, or
     prohibiting the free exercise thereof; or abridging the freedom of speech, or
     of the press; or the right of the people peaceably to assemble, and to petition
     the Government for a redress of grievances.</p>
 
-    <h1>Amendment 2</h1>
+    <h1 id="am2">Amendment 2</h1>
     <p>A well regulated Militia, being necessary to the security of a free State, the
     right of the people to keep and bear Arms, shall not be infringed.</p>
 
-    <h1>Amendment 3</h1>
+    <h1 id="am3">Amendment 3</h1>
     <p>No Soldier shall, in time of peace be quartered in any house, without the
     consent of the Owner, nor in time of war, but in a manner to be prescribed by
     law.</p>
 
-    <h1>Amendment 4</h1>
+    <h1 id="am4">Amendment 4</h1>
     <p>The right of the people to be secure in their persons, houses, papers, and
     effects, against unreasonable searches and seizures, shall not be violated, and
     no Warrants shall issue, but upon probable cause, supported by Oath or
     affirmation, and particularly describing the place to be searched, and the
     persons or things to be seized.</p>
 
-    <h1>Amendment 5</h1>
+    <h1 id="am5">Amendment 5</h1>
     <p>No person shall be held to answer for a capital, or otherwise infamous crime,
     unless on a presentment or indictment of a Grand Jury, except in cases arising
     in the land or naval forces, or in the Militia, when in actual service in time
@@ -574,7 +625,7 @@
     liberty, or property, without due process of law; nor shall private property be
     taken for public use, without just compensation.</p>
 
-    <h1>Amendment 6</h1>
+    <h1 id="am6">Amendment 6</h1>
     <p>In all criminal prosecutions, the accused shall enjoy the right to a speedy and
     public trial, by an impartial jury of the State and district wherein the crime
     shall have been committed, which district shall have been previously
@@ -583,21 +634,21 @@
     process for obtaining witnesses in his favor, and to have the Assistance of
     Counsel for his defence.</p>
 
-    <h1>Amendment 7</h1>
+    <h1 id="am7">Amendment 7</h1>
     <p>In Suits at common law, where the value in controversy shall exceed twenty
     dollars, the right of trial by jury shall be preserved, and no fact tried by a
     jury, shall be otherwise re-examined in any Court of the United States, than
     according to the rules of the common law.</p>
 
-    <h1>Amendment 8</h1>
+    <h1 id="am8">Amendment 8</h1>
     <p>Excessive bail shall not be required, nor excessive fines imposed, nor cruel
     and unusual punishments inflicted.</p>
 
-    <h1>Amendment 9</h1>
+    <h1 id="am9">Amendment 9</h1>
     <p>The enumeration in the Constitution, of certain rights, shall not be construed
     to deny or disparage others retained by the people.</p>
 
-    <h1>Amendment 10</h1>
+    <h1 id="am10">Amendment 10</h1>
     <p>The powers not delegated to the United States by the Constitution, nor
     prohibited by it to the States, are reserved to the States respectively, or to
     the people.</p>
